fix: refatoração dos arquivos